# husika-tts-icpac

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: deploy.yml
languages/: languages.yaml
scripts/: backup.sh  entrypoint.sh  generate_api_key.py  install-cron.sh  prewarm.py  restore.sh
tests/: test_tts_service.py
tts_service/: db.py  logging_config.py
tts_service/api/: schemas.py  server.py
tts_service/auth/: __init__.py  user_store.py
tts_service/engines/: base.py  coqui_vits_engine.py  engine_router.py  espeak_engine.py  mms_engine.py  piper_engine.py
tts_service/ratings/: __init__.py  store.py
web-ui/: index.html
