[project]
name = "husika-tts"
version = "0.1.0"
description = "Multilingual Text-to-Speech for IGAD borderlands early warning system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    # MMS engine
    # Upper bound: coqui-tts 0.27.5 imports a symbol removed in transformers 5.x.
    "transformers>=4.57.6,<5.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "uroman>=1.3.1",
    # Coqui VITS engine for in-house fine-tunes (Turkana, Karamojong).
    # Pin per the model team's README; resolver picks compatible transitive deps.
    "coqui-tts[codec]==0.27.5",
    "huggingface_hub>=0.30.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.4.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tts_service"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
